--- a/Project_TransferWise/ViewController/Main Screen View Controller/Log In View Controller/LogInViewController.xib
+++ b/Project_TransferWise/ViewController/Main Screen View Controller/Log In View Controller/LogInViewController.xib
@@ -41,7 +41,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Add-RI-wnn" userLabel="Email TextField" customClass="CustomTextField" customModule="Project_TransferWise" customModuleProvider="target">
-                    <rect key="frame" x="20" y="167.66666666666666" width="374" height="24"/>
+                    <rect key="frame" x="20" y="169" width="374" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="AIw-fq-fwk"/>
                     </constraints>
@@ -56,11 +56,11 @@
                     </connections>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dcx-gt-Vep" userLabel="Line Top">
-                    <rect key="frame" x="21" y="203.66666666666666" width="372" height="0.66666666666665719"/>
+                    <rect key="frame" x="21" y="205" width="372" height="0.66666666666665719"/>
                     <color key="backgroundColor" red="0.88627450980392153" green="0.90196078431372551" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="muv-Gj-saV" userLabel="Password TextField" customClass="CustomTextField" customModule="Project_TransferWise" customModuleProvider="target">
-                    <rect key="frame" x="20" y="251.33333333333337" width="374" height="24"/>
+                    <rect key="frame" x="20" y="252.66666666666663" width="374" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="DUD-Pg-skx"/>
                     </constraints>
@@ -75,21 +75,21 @@
                     </connections>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f9M-q3-B2r" userLabel="Eye Button">
-                    <rect key="frame" x="365" y="248.66666666666663" width="29" height="29"/>
+                    <rect key="frame" x="365" y="250.33333333333337" width="29" height="29"/>
                     <state key="normal" image="closed_eye"/>
                     <connections>
                         <action selector="showPassword:" destination="-1" eventType="touchUpInside" id="pCE-Pb-ZKW"/>
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A5P-Og-Dfl" userLabel="Line Bottom">
-                    <rect key="frame" x="21" y="287.33333333333331" width="372" height="0.66666666666668561"/>
+                    <rect key="frame" x="21" y="288.66666666666669" width="372" height="1"/>
                     <color key="backgroundColor" red="0.88627450980392153" green="0.90196078431372551" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tzh-JK-yOr">
-                    <rect key="frame" x="20" y="312" width="374" height="50"/>
+                    <rect key="frame" x="20" y="313.66666666666669" width="374" height="47"/>
                     <color key="backgroundColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="0RE-EO-rOa"/>
+                        <constraint firstAttribute="height" constant="47" id="0RE-EO-rOa"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                     <state key="normal" title="Log in">
@@ -100,7 +100,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot password?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lTc-UB-T4a">
-                    <rect key="frame" x="103.66666666666669" y="395" width="207" height="22"/>
+                    <rect key="frame" x="103.66666666666669" y="393.66666666666669" width="207" height="22"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
