--- a/Project_TransferWise/ViewController/Main Tab View Controller/Invite View Controller/Invite friends View Controller/InviteFriendViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Invite View Controller/Invite friends View Controller/InviteFriendViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,10 +21,10 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ISK-K3-rRp" userLabel="Invite Via Email Button">
-                    <rect key="frame" x="20" y="440" width="374" height="50"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ISK-K3-rRp" userLabel="Invite Via Email Button">
+                    <rect key="frame" x="20" y="449" width="374" height="47"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="Svp-Vp-0ss"/>
+                        <constraint firstAttribute="height" constant="47" id="Svp-Vp-0ss"/>
                     </constraints>
                     <state key="normal" title="Share link">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -33,10 +33,10 @@
                         <action selector="shareLink:" destination="-1" eventType="touchUpInside" id="Gxz-K0-nkI"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwb-8V-E4t" userLabel="Invite Via Sms Button">
-                    <rect key="frame" x="20" y="504" width="374" height="50"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwb-8V-E4t" userLabel="Invite Via Sms Button">
+                    <rect key="frame" x="20" y="510" width="374" height="47"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="Fan-mz-I40"/>
+                        <constraint firstAttribute="height" constant="47" id="Fan-mz-I40"/>
                     </constraints>
                     <state key="normal" title="Invite via SMS">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -45,10 +45,10 @@
                         <action selector="sendMessage:" destination="-1" eventType="touchUpInside" id="ygm-fx-jGp"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VLT-UH-uFk" userLabel="Copy Link Button">
-                    <rect key="frame" x="20" y="568" width="374" height="50"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VLT-UH-uFk" userLabel="Copy Link Button">
+                    <rect key="frame" x="20" y="571" width="374" height="47"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="G0l-16-i3c"/>
+                        <constraint firstAttribute="height" constant="47" id="G0l-16-i3c"/>
                     </constraints>
                     <state key="normal" title="Copy my invite link">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -59,7 +59,7 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3tr-Wy-nFC">
-                    <rect key="frame" x="20" y="354.33333333333331" width="374" height="45.666666666666686"/>
+                    <rect key="frame" x="20" y="363.33333333333331" width="374" height="45.666666666666686"/>
                     <attributedString key="attributedText">
                         <fragment content="When 3 friends start using TransferWise, you'll get">
                             <attributes>
@@ -93,10 +93,10 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="evro" translatesAutoresizingMaskIntoConstraints="NO" id="F44-Tz-dOl">
-                    <rect key="frame" x="145" y="244.66666666666666" width="124" height="73.666666666666657"/>
+                    <rect key="frame" x="145" y="253.66666666666666" width="124" height="73.666666666666657"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invite your friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NUY-zK-cXz">
-                    <rect key="frame" x="121.33333333333333" y="179.33333333333334" width="171.66666666666669" height="25.333333333333343"/>
+                    <rect key="frame" x="121" y="188.33333333333334" width="172" height="25.333333333333343"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -113,6 +113,7 @@
                     </connections>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.21568627450980393" green="0.31764705882352939" blue="0.49411764705882355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="F44-Tz-dOl" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.3" id="0h3-4K-8oD"/>
@@ -140,7 +141,6 @@
                 <constraint firstItem="ISK-K3-rRp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="zCP-xc-bAc"/>
                 <constraint firstItem="NUY-zK-cXz" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="zQE-jh-IQJ"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="140.57971014492756" y="142.66304347826087"/>
         </view>
     </objects>
